--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "core-js": "^3.8.3",
+    "esri-loader": "^3.7.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
